--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 <body>
 
 <video id="video" width="1920" height="1080" controls>
-    <source src="final_video.mp4" type="video/mp4">
+    <source src="media/videos/Intro.mp4" type="video/mp4">
     Your browser does not support the video tag.
 </video>
-<button id="startButton" onclick="startProgram()">Start Program</button>
+<button id="Begin Program" onclick="startProgram()">Start Program</button>
 
 <script>
     var video = document.getElementById('video');
