--- a/index.html
+++ b/index.html
@@ -1,68 +1,32 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>digits01 by tapni</title>
+    <title>digits01</title>
     <style>
-        #startButton {
-            display: none;
-            opacity: 0;
-            transition: opacity 1s;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            z-index: 10;
-        }
-        #video-container {
-            position: relative;
-            width: 900px;
-            height: 350px;
-        }
-        video {
-            width: 100%;
-            height: 100%;
+        #video-container
+        {
+            width: 1280px;
+            height: 720px;
         }
     </style>
 </head>
 <body>
 
-<div id="video-container">
-    <video id="Video" controls>
-        <source src="media/videos/Intro.mp4" type="video/mp4">
-        Issue with mp4? Reload the site.
-    </video>
-    <video id="staticVideo" loop style="display: none;">
-        <source src="media/videos/LoopVideo.mp4" type="video/mp4">
-        Issue with mp4? Reload the site.
-    </video>
-    <button id="Begin the Adventure" onclick="startProgram()">Start Program</button>
-</div>
+const video = document.querySelector('video')
+const source = document.querySelector('source')
 
-<script>
-    document.addEventListener('DOMContentLoaded', function() {
-        var mainVideo = document.getElementById('mainVideo');
-        var staticVideo = document.getElementById('staticVideo');
-        var startButton = document.getElementById('startButton');
+video.appendChild(source)
+video.play()
 
-        mainVideo.onended = function() {
-            // Hide the main video and show the static video
-            mainVideo.style.display = 'none';
-            staticVideo.style.display = 'block';
-            staticVideo.play();
-            // Display the start button and fade it in
-            startButton.style.display = 'block';
-            setTimeout(function() {
-                startButton.style.opacity = 1;
-            }, 100); // Small delay to ensure the button is displayed before starting the fade-in effect
-        };
-
-        window.startProgram = function() {
-            alert("Program Started!");
-            // Your program start logic here
-        };
-    });
-</script>
+const changeVideoButton = document.querySelector('#changeVideo')
+changeVideo.addEventListener('click', e => {
+  video.pause()
+  
+  source.setAttribute('src', 'media/videos/Intro.mp4')
+  
+  video.load()
+  video.play()
+})
 
 </body>
 </html>
