--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
     </style>
 </head>
 <body>
-
-<video controls width="250">
-  <source src="media/videos/Intro.mp4" type="video/mp4" />
-</video>
-
+    <div id="video-container">
+    <video controls width="250">
+    <source src="media/videos/Intro.mp4" type="video/mp4" />
+    </video>
 </body>
 </html>
