--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
     <title>digits01</title>
     <style>
+        body, html
+        {
+            justify-content: center;
+            align-items: center;
+            background-color: #f0f0f0;
+        }
         #video-container
         {
             width: 1280px;
