--- a/index.html
+++ b/index.html
@@ -12,19 +12,71 @@
         justify-content: center;
         align-items: center;
         height: 100vh;
-        background-color: #000;
+        background-color: #908c8c;
       }
       video
       {
         max-width: 100%;
         max-height: 100%;
       }
+      #startButton
+      {
+        display: none;
+        opacity: 0;
+        transition: opacity 1s;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        /* z index keeps the button on top */
+        z-index: 10;
+        padding: 10px 20px;
+        font-size: 16px;
+        cursor: pointer;
+      }
+      #video-container
+      {
+        position: relative;
+        width: 100%;
+        height: 100%;
+      }
     </style>
 </head>
 <body>
-  <video autoplay muted>
     <source src="media/videos/Intro.mp4" type="video/mp4">
-    The browser failed to run mp4--Please reload.
+    The browser failed to run mp4.. please reload.
   </video>
 </body>
+  <script>
+    document.addEventListener('DOMContentLoaded', function()
+    {
+      var Intro = document.getElementById('Intro');
+      var pythonstart = document.getElementById('pythonstart');
+      var LoopVideo = "media/videos/LoopVideo.mp4";
+      
+      Intro.onended = function()
+      {
+          Intro.src = LoopVideo;
+          Intro.loop = true;
+          Intro.play();
+          pythonstart.style.display = 'block';
+          // Delay
+          setTimeout(function()
+          {
+              startButton.style.opacity = 1;
+          }, 100);
+      };
+      window.startProgram = function()
+      {
+          fetch('/execute', { method: 'POST' })
+              .then(response => response.json())
+              .then(data =>
+              {
+                alert(data.output);
+                mainVideo.loop = false; // Stop looping after button is pressed
+                pythonstart.style.display = 'none';
+              });
+      };
+  });
+  </script>
 </html>
